--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Imports:
     promises,
     rlang,
     tools,
-    promises
+    promises,
+    roxygen2,
+    ellmer
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
