feat: Implement MCPR tools for session management, image handling, and code execution
This commit introduces a suite of MCPR tools designed to enhance the interaction between AI agents and R sessions. These tools provide functionalities for session management, image handling, and arbitrary code execution.

Key changes include:

- **Session Management:** Added `list_r_sessions` and `select_r_session` tools to allow agents to discover and select specific R sessions.
- **Image Handling:** Implemented `capture_current_plot` and `view_image` tools for capturing and viewing plots and images. The `render_plot` tool enables the generation of plots from R code.
- **Code Execution:** Introduced the `execute_r_code` tool, allowing agents to execute arbitrary R code within the current R session.
- **Namespace Updates:** Expanded the NAMESPACE file to export new functions and import necessary dependencies.
- **Description Updates:** Updated the DESCRIPTION file to include author and maintainer information, as well as imported packages.

These tools are designed to provide a comprehensive set of functionalities for AI agents interacting with R sessions, enabling more complex and interactive workflows. The legacy Ellmer tool definitions have been commented out in preparation for Phase 3 removal.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Title: Model Context Protocol for R
 Version: 0.0.1
 Authors@R: 
     person("Santiago", "Cano-Muniz", , "tisalon@outlook.com", role = c("aut", "cre"))
+Author: Santiago Cano-Muniz [aut, cre]
+Maintainer: Santiago Cano-Muniz <tisalon@outlook.com>
 Description: Provides Model Context Protocol (MCP) tools to enable models to access and interact with R sessions.
 License: CC BY 4.0 + file LICENSE
 Encoding: UTF-8
@@ -21,7 +23,11 @@ Imports:
     tools,
     promises,
     roxygen2,
-    ellmer
+    ellmer,
+    utils,
+    grDevices,
+    methods,
+    stats
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
