Unifies tool execution logic for local and remote calls
Refactors tool execution to use a unified engine for both server-side (local) and client-side (remote) tool calls, improving maintainability and consistency. Moves argument decoding, response encoding, and communication utilities into shared interfaces. Removes legacy code and centralizes JSON-RPC request handling, enabling better type preservation and extensibility for future protocol enhancements.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,6 @@ Imports:
     tools,
     promises,
     roxygen2,
-    ellmer,
     utils,
     grDevices,
     methods,
@@ -31,3 +30,22 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Collate: 
+    'aaa.R'
+    'tool-execution.R'
+    'mcpr-client.R'
+    'mcpr-package.R'
+    'mcpr-server-messenger.R'
+    'mcpr-server-tools.R'
+    'mcpr-server.R'
+    'mcpr-session.R'
+    'protocol.R'
+    'tool-definition-validators.R'
+    'type-conversion-utilities.R'
+    'utils.R'
+    'tool-definition.R'
+    'tool-register.R'
+    'tool-registry-helpers.R'
+    'type-conversion-from-json.R'
+    'type-conversion-serializers.R'
+    'type-conversion-to-json.R'
