--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,21 @@ export(register_mcp_serializer)
 export(register_tools)
 export(stream_dataframe)
 export(to_mcp_json)
+export(tool)
+export(tool_annotations)
+export(tool_reject)
+export(type_array)
+export(type_boolean)
+export(type_enum)
+export(type_integer)
+export(type_number)
+export(type_object)
+export(type_string)
 export(validate_against_schema)
+export(validate_prop_bool)
+export(validate_prop_list_of)
+export(validate_prop_number_whole)
+export(validate_prop_string)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grDevices,replayPlot)
