Replaces schema validation with robust type mapping
Removes the custom JSON schema validation logic and associated tests,
shifting focus to a comprehensive type mapping system for converting
R and JSON schema types to internal type descriptors. Introduces new,
clearer type construction helpers and updates the codebase to use
these structures, aiming for improved extensibility and easier
integration with external schemas.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,17 +3,21 @@
 export("%||%")
 export(ToolRegistry)
 export(can_serialize)
+export(create_execution_context)
+export(execute_tool_call)
 export(from_mcp_json)
 export(get_mcp_serializers)
 export(mcpClient)
 export(mcpServer)
 export(mcp_deserialize)
+export(mcp_request_tool_call)
 export(mcp_serialize)
 export(mcp_server)
 export(mcp_session)
 export(mcp_tools)
 export(register_mcp_serializer)
 export(register_tools)
+export(send_and_receive_message)
 export(stream_dataframe)
 export(to_mcp_json)
 export(tool)
@@ -26,11 +30,10 @@ export(type_integer)
 export(type_number)
 export(type_object)
 export(type_string)
-export(validate_against_schema)
-export(validate_prop_bool)
-export(validate_prop_list_of)
-export(validate_prop_number_whole)
-export(validate_prop_string)
+export(validate_tool_arguments)
+export(validate_tool_description)
+export(validate_tool_fun)
+export(validate_tool_name)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grDevices,replayPlot)
