--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,19 +32,21 @@ Suggests:
 Config/testthat/edition: 3
 Collate: 
     'aaa.R'
-    'mcpr-client.R'
-    'mcpr-package.R'
-    'tool-execution.R'
-    'tool-definition-validators.R'
-    'type-conversion-utilities.R'
+    'logger.R'
     'utils.R'
-    'tool-definition.R'
-    'mcpr-server-tools.R'
-    'mcpr-server.R'
-    'mcpr-session.R'
+    'messenger.R'
     'protocol.R'
-    'tool-register.R'
-    'tool-registry-helpers.R'
+    'type-conversion-utilities.R'
     'type-conversion-from-json.R'
     'type-conversion-serializers.R'
     'type-conversion-to-json.R'
+    'tool-definition-validators.R'
+    'tool-definition.R'
+    'tool-execution.R'
+    'tool-register.R'
+    'tool-registry-helpers.R'
+    'mcpr-server-tools.R'
+    'mcpr-server.R'
+    'mcpr-session.R'
+    'mcpr-client.R'
+    'mcpr-package.R'
