Refactors session class naming and improves encapsulation
Unifies session class naming to lowerCamelCase for consistency and updates all references and exports accordingly. Moves private and public method organization for better encapsulation and code clarity. Updates documentation and tests to reflect the new naming and structure.

Improves maintainability and aligns with naming conventions used elsewhere in the codebase.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%||%")
 export(MCPRLogger)
-export(MCPRSession)
 export(MessageHandler)
 export(ToolRegistry)
 export(can_serialize)
@@ -13,6 +12,7 @@ export(from_mcpr_json)
 export(get_mcpr_serializers)
 export(mcprClient)
 export(mcprServer)
+export(mcprSession)
 export(mcpr_deserialize)
 export(mcpr_serialize)
 export(mcpr_server)
