Removes legacy session management tools and updates exports
Deprecates old R session listing and selection tools in favor of unified session management.
Updates package exports to reflect tool removals and adds missing export for IDE inference.
Improves test setup for enhanced reliability during development.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,13 @@ export(create_messenger)
 export(execute_tool_call)
 export(from_mcpr_json)
 export(get_mcpr_serializers)
+export(infer_ide)
 export(mcprClient)
 export(mcprServer)
 export(mcprSession)
 export(mcpr_deserialize)
 export(mcpr_serialize)
 export(mcpr_server)
-export(mcpr_session)
-export(mcpr_session_stop)
 export(mcpr_tools)
 export(register_mcpr_serializer)
 export(register_tools)
