Adds modular session and system state viewing tool
Introduces a comprehensive tool for inspecting R session state, terminal history, error/warning diagnostics, installed packages, workspace files, and package search path. Modularizes logic into focused, testable functions with robust output formatting and edge case handling. Provides integrated unit tests for all core utilities and user-facing features to ensure reliability and maintainability.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,3 +50,6 @@ Collate:
     'type-conversion-to-json.R'
     'type-conversion-utilities.R'
     'utils.R'
+    'view-utils.R'
+    'view-session-state.R'
+    'view-system-info.R'
