--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_mcpr_serializers)
 export(get_mcptools_tools)
 export(get_system_socket_url)
 export(infer_ide)
+export(install_mcpr)
 export(mcp_server)
 export(mcp_session)
 export(mcp_session_stop)
