--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -41,6 +41,9 @@ logo: false
 
 template:
   bootstrap: 5
+  light-switch: true
+  theme: github-light
+  theme-dark: github-dark
   bslib:
     primary: "#0066cc"
     base_font: 
@@ -65,9 +68,7 @@ template:
       <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-      <script src="lightswitch.js"></script>
       
       <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -169,7 +170,7 @@ navbar:
   type: light
   structure:
     left: [intro, reference, articles, news]
-    right: [search, github, theme_toggle]
+    right: [search, github, lightswitch]
   components:
     intro:
       text: "Quick Start"
@@ -178,13 +179,6 @@ navbar:
       icon: fab fa-github fa-lg
       href: https://github.com/phisanti/MCPR
       aria-label: "View source code on GitHub"
-    theme_toggle:
-      text: |
-        <a href="#" class="theme-toggle" title="Toggle theme">
-          <i class="fas fa-sun"></i>
-          <i class="fas fa-moon"></i>
-        </a>
-      aria-label: Toggle theme
 
 # Auto-generate reference to avoid missing topics
 
