--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -39,12 +39,14 @@ jobs:
           extra-packages: any::pkgdown, any::quarto, local::., nx10/httpgd
           needs: website
 
+      - name: Install package
+        run: R CMD INSTALL --no-multiarch --with-keep.source .
+        
       - name: Build site
         run: |
-          Sys.setlocale("LC_ALL", "en_US.UTF-8")
-          options(encoding = "UTF-8")
-          pkgdown::build_site_github_pages(new_process = TRUE, install = FALSE)
-        shell: Rscript {0}
+          export LC_ALL=en_US.UTF-8
+          export LANG=en_US.UTF-8
+          Rscript -e "pkgdown::build_site_github_pages(new_process = TRUE, install = FALSE)"
 
       - name: Upload to GitHub pages
         if: github.event_name != 'pull_request'
