Adds instruction file template creation and agent table formatting
Introduces a function for generating scaffolded instruction markdown files with YAML headers and guidance, enabling users to create domain-specific AI instructions without manual setup. Implements a utility to render data frames as aligned tables for agent/LLM output, ensuring consistent formatting. Enhances testing for these features and updates documentation to clarify usage patterns.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,7 +54,7 @@ Remotes: nx10/httpgd
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 SystemRequirements: Unix sockets (Unix), Named pipes (Windows)
-Collate: 
+Collate:
     'aaa.R'
     'logger.R'
     'mcpr-base.R'
@@ -74,7 +74,9 @@ Collate:
     'type-conversion-to-json.R'
     'type-conversion-utilities.R'
     'utils.R'
+    'instruction-files.R'
     'view-utils.R'
     'view-session-state.R'
     'view-system-info.R'
     'install-mcpr.R'
+    'create_instruction.R'
