feat: add inspect_object tool and extend view targets - implement inspect_object MCP tool with auto-detection for 12 R object   types (data frames, vectors, factors, functions, lists, matrices,   S3/S4/R6, formulas, date/time, environments) - extend view tool with last_value and help (parsed Rd docs) targets - add 182 new tests, 1523 total passing with 0 failures

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,6 +76,7 @@ Collate:
     'type-conversion-utilities.R'
     'utils.R'
     'view-utils.R'
+    'inspect-object.R'
     'view-session-state.R'
     'view-system-info.R'
     'install-mcpr-toml.R'
