--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,7 @@ export(mcpr_session_start)
 export(mcpr_session_stop)
 export(mcpr_tools)
 export(tool)
+importFrom(base64enc,dataURI)
+importFrom(processx,process)
+importFrom(promises,as.promise)
+importFrom(roxygen2,parse_file)
