--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -32,11 +32,17 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
+          # r-version pinned: R 4.5.x triggers deparse/GC segfault in cli::theme_create
+          # during pkgdown site build; 4.4.2 is the last known-good version
+          r-version: '4.4.2'
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, any::quarto, local::., nx10/httpgd
+          # xml2@1.3.8 pinned: 1.4.0+ has DOM manipulation memory bugs (segfaults
+          # in xml_add_sibling / navbar_html) that affect pkgdown on both ARM64 macOS
+          # and x86_64 Ubuntu; 1.3.8 is the last known-good version
+          extra-packages: any::pkgdown, any::quarto, xml2@1.3.8, local::., nx10/httpgd
           needs: website
 
       - name: Install package
