--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -26,38 +26,29 @@ jobs:
           extra-packages: covr@3.6.4, any::xml2, any::devtools, nx10/httpgd
           needs: coverage
 
+      - name: Install package
+        run: R CMD INSTALL --no-multiarch --with-keep.source .
+
       - name: Test coverage
         run: |
-          # Working solution: Use pkgload with file_coverage to access all functions
-          
-          # Ensure testthat.R uses pkgload (keeps internal functions accessible)
-          cat('pkgload::load_all(".", helpers = FALSE, quiet = TRUE)\n\nlibrary(testthat)\ntest_dir("testthat")\n', file = "tests/testthat.R")
-          
-          # Load package in development mode
-          pkgload::load_all(".", helpers = FALSE, quiet = TRUE)
-          
-          # Load required packages
-          library(testthat)
+          # package_coverage instruments the package namespace directly, so
+          # MCPR:::internal_func() calls in tests hit the instrumented versions.
+          # file_coverage only instruments re-sourced globals, missing all ::: calls.
           library(covr)
-          
-          # Get source and test files
-          r_files <- list.files("R", pattern = "\\.R$", full.names = TRUE)
-          test_files <- list.files("tests/testthat", pattern = "^test.*\\.R$", full.names = TRUE)
-          
-          # Use file_coverage which works with pkgload
-          cat("Running coverage calculation...\n")
-          cov <- covr::file_coverage(
-            source_files = r_files,
-            test_files = test_files
+
+          cov <- covr::package_coverage(
+            path = ".",
+            quiet = FALSE,
+            clean = TRUE
           )
-          
+
           cat("Coverage entries:", length(cov), "\n")
           if (length(cov) > 0) {
             cat("Coverage percentage:", round(covr::percent_coverage(cov), 2), "%\n")
           } else {
             cat("No coverage data generated\n")
           }
-          
+
           # Generate cobertura XML
           covr::to_cobertura(cov)
         shell: Rscript {0}
